--- a/src/abstracts/keyframes.scss
+++ b/src/abstracts/keyframes.scss
@@ -1,4 +1,4 @@
-@keyframes opacityDisappear {
+@keyframes disappear {
   0% {
     opacity: 1;
   }
@@ -7,9 +7,9 @@
   }
 }
 
-@keyframes opacityAppear {
+@keyframes appear {
   0% {
-    opacity: 0.5;
+    opacity: 0;
   }
   100% {
     opacity: 1;
