--- a/src/components/App/_font.scss
+++ b/src/components/App/_font.scss
@@ -9,3 +9,10 @@ body {
   font-weight: 400;
   color: $color-dark-Sand;
 }
+
+@media (max-width: 800px) {
+  html,
+  body {
+    font-size: 16px;
+  }
+}
