--- a/src/components/Task/task.scss
+++ b/src/components/Task/task.scss
@@ -97,3 +97,20 @@
     }
   }
 }
+
+@media (max-width: 800px) {
+  .task {
+    &__container {
+      display: flex;
+      gap: 20px;
+      padding: 0px;
+      flex-direction: column;
+      // min-width: 100%;
+    }
+
+    &__item {
+      gap: 10px;
+      padding: 10px;
+    }
+  }
+}
